// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericSelector renders markup with state 1`] = `
<ng-component
  testedWidget={[Function NgAisNumericSelector]}
>
  <ais-instantsearch>
    <ais-numeric-selector>
      <div
        class="ais-NumericSelector"
      >
        <select
          class="ais-NumericSelector-select"
        >
          
          <option
            class="ais-NumericSelector-option"
            value="10"
          >
             foo 
          </option>
          <option
            class="ais-NumericSelector-option"
            value="20"
          >
             bar 
          </option>
          <option
            class="ais-NumericSelector-option"
            value="30"
          >
             foobar 
          </option>
          <option
            class="ais-NumericSelector-option"
            value="40"
          >
             barfoo 
          </option>
        </select>
      </div>
    </ais-numeric-selector>
  </ais-instantsearch>
</ng-component>
`;

exports[`NumericSelector renders markup without state 1`] = `
<ng-component
  testedWidget={[Function NgAisNumericSelector]}
>
  <ais-instantsearch>
    <ais-numeric-selector>
      <div
        class="ais-NumericSelector"
      >
        <select
          class="ais-NumericSelector-select"
        >
          
        </select>
      </div>
    </ais-numeric-selector>
  </ais-instantsearch>
</ng-component>
`;
